<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/newArticleCardView">
    //ArticleAdapter required "R.layout".
</android.support.v7.widget.CardView>
